# compose-for-agents

a2a/: pyproject.toml
adk/: pyproject.toml
adk-cerebras/: pyproject.toml
adk-cerebras/agents/: requirements.txt
adk-sock-shop/: pyproject.toml
agno/agent/: pyproject.toml
agno/agent-ui/: package.json  pnpm-lock.yaml
crew-ai/: pyproject.toml
langchaingo/: go.mod  go.sum
langgraph/: pyproject.toml
