[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-core>=1.2.28,<2.0.0",  # CVE-2025-68664 remediation — pin to safe 0.3.x
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.9",
]

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "ruff>=0.12.0",
]
